# TicketSystem-2026

./: .gitignore  CMakeLists.txt  README.md
docs/: tcp_component.md
frontend/include/client/: home_page_widget.hpp  login_dialog.hpp  main_window.hpp  top_bar.hpp
frontend/include/client/bars/: status_bar.hpp
frontend/include/client/dialogs/: profile_dialog.hpp  register_dialog.hpp
frontend/include/client/widgets/: placeholder_page_widget.hpp  ticket_list_widget.hpp  ticket_query_widget.hpp
frontend/include/web/: tcpclient.hpp  tcpserver.hpp
frontend/include/web/dispatch/: dispatcher.hpp  sender.hpp
frontend/include/web/tcp/: tcpclient.hpp  tcpserver.hpp
frontend/include/web/tlv/: tlvpacket.hpp  tlvparser.hpp
frontend/include/web/udp/: udpclient.hpp  udpserver.hpp
frontend/src/client/: home_page_widget.cpp  login_dialog.cpp  main.cpp  main_window.cpp  placeholder_page_widget.cpp  profile_dialog.cpp  register_dialog.cpp  status_bar.cpp  ticket_query_widget.cpp  top_bar.cpp
frontend/src/client/bars/: status_bar.cpp  top_bar.cpp
frontend/src/client/dialogs/: login_dialog.cpp  profile_dialog.cpp  register_dialog.cpp
frontend/src/client/widgets/: home_page_widget.cpp  placeholder_page_widget.cpp  ticket_list_widget.cpp  ticket_query_widget.cpp
frontend/src/web/: client.cpp  server.cpp  tcpclient.cpp  tcpserver.cpp
frontend/src/web/dispatch/: dispatcher.cpp
frontend/src/web/tcp/: tcpclient.cpp  tcpserver.cpp
frontend/src/web/tlv/: tlvpacket.cpp  tlvparser.cpp
frontend/src/web/udp/: udpclient.cpp  udpserver.cpp
include/: config.hpp
include/command/: command.hpp  token.hpp
include/result/: result.hpp
include/stl/: exceptions.hpp  hash_table.hpp  list.hpp  priority_queue.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
include/storage/: bpt.hpp  buffer.hpp  disk.hpp  dynamic_river.hpp  memory_river.hpp  page.hpp
include/system/: order.hpp  ticket.hpp  train.hpp  user.hpp
include/utils/: comparator.hpp  fixed_string.hpp  time_date.hpp  type_helper.hpp  validator.hpp
src/: bpt.cpp  cleanup.cpp  main.cpp
src/command/: command.cpp  token.cpp
src/result/: result.cpp
src/system/: order.cpp  ticket.cpp  train.cpp  user.cpp
src/utils/: time_date.cpp  validator.cpp
test/: fixed_string_test.cpp  type_helper_test.cpp
test/tlv/: dispatcher_large_test.cpp  dispatcher_test.cpp  tcp_large_robustness_test.cpp  tcp_robustness_test.cpp  tcp_test.cpp  tcp_tlv_mixed_test.cpp  tlvpacket_test.cpp  tlvparser_test.cpp
